compiler-core/src/snapshots/compiler_core__parser__tests__fixtures__example_program.snap
---
source: compiler-core/src/parser.rs
expression: ast
---
Ok(
    Ast {
        statements: [
            Declaration {
                decl: FunctionDecl {
                    name: "add",
                    arguments: FunctionArgsList {
                        args: [
                            FunctionArg {
                                name: "x",
                            },
                            FunctionArg {
                                name: "y",
                            },
                        ],
                    },
                    body: [
                        BareExpression(
                            BinaryOp {
                                left: Variable(
                                    "x",
                                ),
                                operator: Plus,
                                right: Variable(
                                    "y",
                                ),
                            },
                        ),
                    ],
                },
                exported: false,
            },
            Declaration {
                decl: FunctionDecl {
                    name: "f",
                    arguments: FunctionArgsList {
                        args: [
                            FunctionArg {
                                name: "x",
                            },
                        ],
                    },
                    body: [
                        Declaration(
                            Assignment {
                                name: "t",
                                expr: Negation(
                                    Constant(
                                        Int(
                                            3,
                                        ),
                                    ),
                                ),
                            },
                        ),
                        Declaration(
                            Assignment {
                                name: "y",
                                expr: BinaryOp {
                                    left: BinaryOp {
                                        left: Variable(
                                            "x",
                                        ),
                                        operator: Plus,
                                        right: Constant(
                                            Int(
                                                2,
                                            ),
                                        ),
                                    },
                                    operator: Plus,
                                    right: Variable(
                                        "t",
                                    ),
                                },
                            },
                        ),
                        BareExpression(
                            BinaryOp {
                                left: Variable(
                                    "x",
                                ),
                                operator: Multiply,
                                right: Variable(
                                    "y",
                                ),
                            },
                        ),
                    ],
                },
                exported: false,
            },
            Declaration {
                decl: FunctionDecl {
                    name: "main",
                    arguments: FunctionArgsList {
                        args: [],
                    },
                    body: [
                        BareExpression(
                            BinaryOp {
                                left: BinaryOp {
                                    left: FunctionCall {
                                        name: "add",
                                        args: [
                                            Constant(
                                                Int(
                                                    2,
                                                ),
                                            ),
                                            Constant(
                                                Int(
                                                    4,
                                                ),
                                            ),
                                        ],
                                    },
                                    operator: Minus,
                                    right: Constant(
                                        Int(
                                            1,
                                        ),
                                    ),
                                },
                                operator: Multiply,
                                right: Constant(
                                    Int(
                                        2,
                                    ),
                                ),
                            },
                        ),
                    ],
                },
                exported: false,
            },
        ],
    },
)
