compiler-core/src/snapshots/compiler_core__parser__tests__fixtures__functions.snap
---
source: compiler-core/src/parser.rs
expression: ast
---
Ok(
    Ast {
        statements: [
            Declaration {
                decl: FunctionDecl {
                    name: "my_first_func",
                    arguments: FunctionArgsList {
                        args: [],
                    },
                    body: [
                        Declaration(
                            Assignment {
                                name: "x",
                                expr: Constant(
                                    Int(
                                        5,
                                    ),
                                ),
                            },
                        ),
                        Declaration(
                            Assignment {
                                name: "y",
                                expr: BinaryOp {
                                    left: Variable(
                                        "x",
                                    ),
                                    operator: Multiply,
                                    right: Constant(
                                        Int(
                                            2,
                                        ),
                                    ),
                                },
                            },
                        ),
                        BareExpression(
                            Variable(
                                "y",
                            ),
                        ),
                    ],
                },
                exported: false,
            },
            Declaration {
                decl: FunctionDecl {
                    name: "func_with_closure",
                    arguments: FunctionArgsList {
                        args: [],
                    },
                    body: [
                        Declaration(
                            Assignment {
                                name: "x",
                                expr: Constant(
                                    Int(
                                        5,
                                    ),
                                ),
                            },
                        ),
                        Declaration(
                            FunctionDecl {
                                name: "top_stuff",
                                arguments: FunctionArgsList {
                                    args: [],
                                },
                                body: [
                                    BareExpression(
                                        BinaryOp {
                                            left: Variable(
                                                "x",
                                            ),
                                            operator: Multiply,
                                            right: Constant(
                                                Int(
                                                    2,
                                                ),
                                            ),
                                        },
                                    ),
                                ],
                            },
                        ),
                        BareExpression(
                            Variable(
                                "top_stuff",
                            ),
                        ),
                    ],
                },
                exported: false,
            },
            Declaration {
                decl: FunctionDecl {
                    name: "function_with_arguments",
                    arguments: FunctionArgsList {
                        args: [
                            FunctionArg {
                                name: "x",
                            },
                            FunctionArg {
                                name: "y",
                            },
                        ],
                    },
                    body: [
                        BareExpression(
                            BinaryOp {
                                left: Variable(
                                    "x",
                                ),
                                operator: Multiply,
                                right: Variable(
                                    "y",
                                ),
                            },
                        ),
                    ],
                },
                exported: true,
            },
            Declaration {
                decl: FunctionDecl {
                    name: "single_argument_func",
                    arguments: FunctionArgsList {
                        args: [
                            FunctionArg {
                                name: "x",
                            },
                        ],
                    },
                    body: [
                        BareExpression(
                            BinaryOp {
                                left: BinaryOp {
                                    left: Constant(
                                        Int(
                                            2,
                                        ),
                                    ),
                                    operator: Multiply,
                                    right: Variable(
                                        "x",
                                    ),
                                },
                                operator: Plus,
                                right: Constant(
                                    Int(
                                        1,
                                    ),
                                ),
                            },
                        ),
                    ],
                },
                exported: false,
            },
        ],
    },
)
