compiler-core/src/snapshots/compiler_core__parser__tests__fixtures__maths.snap
---
source: compiler-core/src/parser.rs
expression: ast
---
Ok(
    Ast {
        statements: [
            Declaration {
                decl: Assignment {
                    name: "x",
                    expr: Constant(
                        Int(
                            5,
                        ),
                    ),
                },
                exported: false,
            },
            Declaration {
                decl: Assignment {
                    name: "y",
                    expr: BinaryOp {
                        left: Constant(
                            Int(
                                5,
                            ),
                        ),
                        operator: Plus,
                        right: Constant(
                            Int(
                                2,
                            ),
                        ),
                    },
                },
                exported: false,
            },
            Declaration {
                decl: Assignment {
                    name: "z",
                    expr: BinaryOp {
                        left: Variable(
                            "x",
                        ),
                        operator: Minus,
                        right: Constant(
                            Int(
                                3,
                            ),
                        ),
                    },
                },
                exported: false,
            },
            Declaration {
                decl: Assignment {
                    name: "z",
                    expr: BinaryOp {
                        left: BinaryOp {
                            left: Constant(
                                Int(
                                    2,
                                ),
                            ),
                            operator: Plus,
                            right: BinaryOp {
                                left: Variable(
                                    "y",
                                ),
                                operator: Multiply,
                                right: Variable(
                                    "z",
                                ),
                            },
                        },
                        operator: Minus,
                        right: Constant(
                            Int(
                                4,
                            ),
                        ),
                    },
                },
                exported: false,
            },
            Declaration {
                decl: Assignment {
                    name: "w",
                    expr: BinaryOp {
                        left: Constant(
                            Int(
                                2,
                            ),
                        ),
                        operator: Multiply,
                        right: BinaryOp {
                            left: Variable(
                                "x",
                            ),
                            operator: Plus,
                            right: Constant(
                                Int(
                                    1,
                                ),
                            ),
                        },
                    },
                },
                exported: false,
            },
            Declaration {
                decl: Assignment {
                    name: "v",
                    expr: BinaryOp {
                        left: BinaryOp {
                            left: Constant(
                                Int(
                                    2,
                                ),
                            ),
                            operator: Multiply,
                            right: Variable(
                                "x",
                            ),
                        },
                        operator: Plus,
                        right: Constant(
                            Int(
                                1,
                            ),
                        ),
                    },
                },
                exported: false,
            },
        ],
    },
)
