compiler-core/src/snapshots/compiler_core__parser__tests__fixtures__strings.snap
---
source: compiler-core/src/parser.rs
expression: ast
---
Ok(
    Ast {
        statements: [
            Declaration {
                decl: Assignment {
                    name: "my_first_string",
                    expr: Constant(
                        Str(
                            "hello",
                        ),
                    ),
                },
                exported: false,
            },
            Declaration {
                decl: Assignment {
                    name: "string_with_multiple_words",
                    expr: Constant(
                        Str(
                            "lots of words here",
                        ),
                    ),
                },
                exported: false,
            },
            Declaration {
                decl: Assignment {
                    name: "empty_string",
                    expr: Constant(
                        Str(
                            "",
                        ),
                    ),
                },
                exported: false,
            },
            Declaration {
                decl: Assignment {
                    name: "multiline_string",
                    expr: Constant(
                        Str(
                            "this baby\ngoes over\n\nmultiple lines.\n",
                        ),
                    ),
                },
                exported: false,
            },
        ],
    },
)
